[gd_scene load_steps=9 format=2]

[ext_resource path="res://core/GameState.gd" type="Script" id=1]
[ext_resource path="res://core/maildaemon.gd" type="Script" id=2]
[ext_resource path="res://core/fishing.gd" type="Script" id=3]
[ext_resource path="res://core/calendar.gd" type="Script" id=4]
[ext_resource path="res://core/inventory.gd" type="Script" id=5]
[ext_resource path="res://core/garden.gd" type="Script" id=6]
[ext_resource path="res://core/fortune.gd" type="Script" id=7]
[ext_resource path="res://core/Player.gd" type="Script" id=8]

[node name="GameState" type="Node" groups=[
"Persist",
"game_state",
]]
script = ExtResource( 1 )

[node name="Calendar" type="Node" parent="." groups=[
"Persist",
]]
script = ExtResource( 4 )

[node name="Garden" type="Node" parent="." groups=[
"Persist",
]]
script = ExtResource( 6 )

[node name="Inventory" type="Node" parent="." groups=[
"Persist",
]]
script = ExtResource( 5 )

[node name="Mail" type="Node" parent="." groups=[
"Persist",
]]
script = ExtResource( 2 )

[node name="Fishing" type="Node" parent="." groups=[
"Persist",
]]
script = ExtResource( 3 )

[node name="Fortune" type="Node" parent="." groups=[
"Persist",
]]
script = ExtResource( 7 )

[node name="Player" type="Node" parent="." groups=[
"Persist",
]]
script = ExtResource( 8 )

[node name="Achievements" type="Node" parent="."]

[node name="Stats" type="Node" parent="."]

[node name="Requests" type="Node" parent="."]

[connection signal="advance" from="Calendar" to="Garden" method="_on_calendar_advance"]
[connection signal="advance" from="Calendar" to="Mail" method="_on_calendar_advance"]
[connection signal="advance" from="Calendar" to="Fortune" method="_on_calendar_advance"]
[connection signal="advance" from="Calendar" to="Player" method="_on_Calendar_advance"]
[connection signal="changed" from="Fortune" to="Garden" method="_on_Fortune_changed"]
[connection signal="changed" from="Fortune" to="Fishing" method="_on_Fortune_changed"]
